# mPSI-TableOPPRF

./: CMakeLists.txt  README.md  run_protocol.sh
MPCHonestMajority/: CMakeLists.txt  DNHonestMult.h  MPSI_Party.h  MPSI_Party_old.cpp  Parties.txt  ProtocolParty.h  ProtocolParty2.h  README.md  main.cpp  run_protocol.sh
MPCHonestMajority/test/: MPCHonestMajority**0*3*input_P2.txt*output.txt*input_circuit3.txt*ZpMersenne61*HIM*DN*Single*Parties.txt*5.json  MPCHonestMajority**0*3*inputs20.txt*output.txt*ic.txt*ZpMersenne*HIM*DN*Single*20*Parties.txt*5.json  MPCHonestMajority**0*3*inputs20.txt*output.txt*input_test_1_circuit.txt*ZpMersenne*HIM*DN*Single*20*Parties.txt*1.json  MPCHonestMajority**0*3*inputs333.txt*output.txt*ic.txt*ZpMersenne61*HIM*DN*Single*Parties.txt*5.json  MPCHonestMajority**1*3*input_P2.txt*output.txt*input_circuit3.txt*ZpMersenne61*HIM*DN*Single*Parties.txt*5.json  MPCHonestMajority**1*3*inputs20.txt*output.txt*ic.txt*ZpMersenne*HIM*DN*Single*20*Parties.txt*5.json  MPCHonestMajority**1*3*inputs20.txt*output.txt*input_test_1_circuit.txt*ZpMersenne*HIM*DN*Single*20*Parties.txt*1.json  MPCHonestMajority**1*3*inputs333.txt*output.txt*ic.txt*ZpMersenne61*HIM*DN*Single*Parties.txt*5.json  MPCHonestMajority**2*3*input_P2.txt*output.txt*input_circuit3.txt*ZpMersenne61*HIM*DN*Single*Parties.txt*5.json  MPCHonestMajority**2*3*inputs20.txt*output.txt*ic.txt*ZpMersenne*HIM*DN*Single*20*Parties.txt*5.json  MPCHonestMajority**2*3*inputs20.txt*output.txt*input_test_1_circuit.txt*ZpMersenne*HIM*DN*Single*20*Parties.txt*1.json  MPCHonestMajority**2*3*inputs333.txt*output.txt*ic.txt*ZpMersenne61*HIM*DN*Single*Parties.txt*5.json  in_party_0.txt  in_party_1.txt  in_party_2.txt  in_party_3.txt  in_party_4.txt  in_party_5.txt  in_party_6.txt  in_party_7.txt  in_party_9.txt  input_circuit3.txt  input_test_1_circuit.txt  inputs20.txt  op_party_0.txt  op_party_1.txt  op_party_10.txt  op_party_11.txt  op_party_12.txt  op_party_13.txt  op_party_14.txt  op_party_2.txt  op_party_3.txt  op_party_4.txt  op_party_5.txt  op_party_6.txt  op_party_7.txt  (+6 more)
frontend/: CMakeLists.txt  OtBinMain.cpp  OtBinMain.h  main.cpp
(+108 files in other folders)
